# wxwidgets-cmake

./: CMakeLists.txt  README.md  sample.rc  wxwidgets-cmake.7z
artprov/: arttest.cpp
fswatcher/: CMakeLists.txt
